[package]
name = "rssss"
version = "0.1.0"
authors = ["zaneli <shun.otani@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.5"
actix-web = { version="3.3", features=["rustls"] }
rustls = "0.18.0"
actix-rt = "1.1.1"
listenfd = "0.3"
awc = "2.0.3"
actix-http = "2.2.0"
futures = "0.3"

bytes = "0.5.3"
log = "0.4"
simple_logger = "1.16"
xml-rs = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
scraper = "0.12"
linked-hash-map = "0.5.4"
