[package]
name = "rssss"
version = "0.1.0"
authors = ["zaneli <shun.otani@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-http = "3.0"
actix-rt = "2.6"
actix-web = "4.0"
awc = { version="3.0", features=["rustls"] }
futures = "0.3"
linked-hash-map = "0.5"
listenfd = "0.5"
log = "0.4"
rustls = "0.20"
scraper = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "2.1"
xml-rs = "0.8"
